# rise

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
debug-logs/: raw-webrender-nodes-experements.txt  raw-webrender-nodes-layout.txt
examples/: layout.rs  simple.rs  styles.json
examples/common/: mod.rs  utils.rs
src/: app.rs  event.rs  geometry.rs  lib.rs  main.rs  render.rs  ui.rs  window.rs
src/layout/: context.rs  experiments.rs  layout.rs  mod.rs  styles.rs  view.rs
src/layout/style/: draw.rs  mod.rs  style.rs  traits.rs
src/resources/: font.rs  id.rs  image.rs  mod.rs
src/solver/: mod.rs  shortcuts.rs  solver.rs
src/text/: mod.rs
src/utils/: mod.rs  tree.rs
tests/: shortcuts.rs
