[package]
name = "rise"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
euclid = { version = "0.17.3", features = ["serde"] }
env_logger = "0.4"
gleam = "0.5"
log = "0.3"

webrender = { git = "https://github.com/servo/webrender", rev = "23fa7512dd5e6249ccf798267418d20f2805376e"}
rise-stylesheet = { git = "https://github.com/rise-ui/rise-stylesheet"}
# rise-stylesheet = { path = "../rise-stylesheet"}
limn-text_layout = { path = "./text_layout" }
ordered-float = "0.5.0"
palette = "0.3"
rand = "0.4.2"

stb_truetype = "0.2.1"
app_units = "0.6"
rusttype = "0.2.1"
glutin = "0.12.0"
image = "0.16"

linked-hash-map = "0.5.0"
font-loader = "0.5.0"
lazy_static = "0.2.2"
stable_bst = "0.2.0"
multi_mut = "0.1.3"
failure = "0.1.1"
maplit = "0.1.4"
mopa = "0.2.2"
