[package]
name = "rise"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
edition = "2018"

[dependencies]
yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
drawer = { git = "https://github.com/rise-ui/drawer", branch = "master" }
dom = { git = "https://github.com/rise-ui/dom-lite", branch = "master" }
jss = { git = "https://github.com/rise-ui/jss-rs", branch = "master" }
euclid = { version = "0.19.5", features = ["serde"] }
ordered-float = "1.0.1"
env_logger = "0.6.0"
palette = "0.4.1"
rand = "0.6.4"
gleam = "0.6.8"
log = "0.4.6"

# drawer = { path = "../drawer" }
# dom = { path = "../dom-lite" }
# jss = { path = "../jss-rs" }

stb_truetype = "0.2.5"
app_units = "0.7.1"
rusttype = "0.7.3"
glutin = "0.19.0"
image = "0.21.0"

linked-hash-map = "0.5.1"
font-loader = "0.8.0"
lazy_static = "1.2.0"
stable_bst = "0.2.0"
multi_mut = "0.1.3"
failure = "0.1.5"
maplit = "1.0.1"
mopa = "0.2.2"
